fixed testimonials h1 size on mobile

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -95,6 +95,9 @@ footer {
       font-size: 5.7vw;
     }
   }
+  h1.testimonials {
+    font-size: 3.7em !important;
+  }
   p.bigger {
     font-size: 1.6em;
   }
